E-Mail sending funktioniert

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,8 @@ development:
   database: blog_development
   pool: 5
   timeout: 5000
+  username: postgres
+  password: passwort
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -13,6 +15,8 @@ test:
   database: blog_test
   pool: 5
   timeout: 5000
+  username: postgres
+  password: passwort
 
 production:
   adapter: postgresql
